// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink can be presented as one of the allowed fullwidth 1`] = `
<a
  class="sc-aXZVg sc-eqUAAy bPxQNm gA-dBns"
>
  Go home
</a>
`;

exports[`ButtonLink can be presented as one of the allowed variants 1`] = `
<a
  class="sc-aXZVg sc-eqUAAy blAfUS bJSsIP"
>
  Go home
</a>
`;

exports[`ButtonLink can be presented as one of the allowed variants 2`] = `
<a
  class="sc-aXZVg sc-eqUAAy cGxjTE fvhBUB"
>
  Go home
</a>
`;

exports[`ButtonLink renders 1`] = `
<a
  class="sc-aXZVg sc-eqUAAy bPxQNm ekkYfz"
>
  Go home
</a>
`;
